<resources>
    <string name="app_name">Footstep</string>
    <string name="app_description">Timeline Creation and Sharing App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_button_text">Login</string>
    <string name="login_username_edit_placeholder">Username</string>
    <string name="login_email_edit_placeholder">Email</string>
    <string name="login_password_edit_placeholder">Password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="login_link_text">Don\'t have an account? Sign up!</string>
    <string name="signup_link_text">Already have an account? Log in!</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_timelines_title">Timelines</string>
    <string name="settings_receive_notifications_checkbox_text">Receive Notifications</string>
    <string name="nav_settings_title">Settings</string>
    <string name="search_bar_placeholder">Search...</string>
    <string name="search_button_text">Search</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="settings_logout_button_text">Logout</string>
    <string name="nav_search_title">Search</string>
    <string name="timeline_name_edit_placeholder">Timeline Name</string>
    <string name="timeline_description_edit_placeholder">Description (optional)</string>
    <string name="save_edit_timeline_button_text">Save</string>
    <string name="exit_edit_timeline_buttton_text">Exit</string>
    <string name="title_activity_create_timeline">New Timeline</string>
    <string name="title_activity_view_timeline">View Timeline</string>
    <string name="login_checkbox_text">Remember me</string>
    <string name="home_friends_list_text">Friends</string>
    <string name="home_feed_text">Feed</string>
    <string name="title_activity_create_event">New Event</string>
    <string name="event_title_edit_placeholder">Event Title</string>
    <string name="event_date_picker_button_text">Choose Date</string>
</resources>
