<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_margin="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!--<ImageView-->
        <!--android:id="@+id/signup_logo"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200dp"-->
        <!--android:src="@drawable/profile_picture"-->
        <!--android:scaleType="fitXY"-->
        <!--android:adjustViewBounds="true"/>-->

    <EditText
        android:id="@+id/signup_username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username_edit_placeholder"/>

    <EditText
        android:id="@+id/signup_email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email_edit_placeholder"/>

    <EditText
        android:id="@+id/signup_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_password_edit_placeholder"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_text"
        android:background="@color/colorMain"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_link_text"
        android:layout_gravity="center"/>

</LinearLayout>