<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/event_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title_edit_placeholder"/>

    <EditText
        android:id="@+id/event_description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timeline_description_edit_placeholder"/>

    <Spinner
        android:id="@+id/event_date_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_edit_event_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_edit_timeline_button_text"
            android:background="@color/lightGreen"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/exit_edit_event_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit_edit_timeline_buttton_text"
            android:background="@color/lightRed"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>